web/app/themes/maxistentialism-2019/resources/assets/styles/main.scss
@tailwind base;

@import "common/fonts";
@import "common/global";
@import "common/variables";
@import "common/transitions";

@tailwind components;

@import "components/buttons";
@import "components/comments";
@import "components/forms";
@import "components/images";
@import "components/wp-classes";
@import "layouts/header";
@import "layouts/sidebar";
@import "layouts/footer";
@import "layouts/pages";
@import "layouts/posts";
@import "layouts/tinymce";
@import "vendor/tiny-slider";

@tailwind utilities;

body {
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	font-family: Walsheim, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

a:hover {
	text-decoration: none !important;
}
//Molecules
.red-link {
	border-bottom: 1px solid transparent;
}

.red-link:hover {
	border-color: #EF4832;
}

@screen sm {
	.col-2-break {
		column-count: 2;
		page-break-inside: avoid;
		break-inside: avoid;
	}
}

.ul-special .li-special:last-child {
	@apply border-b-4
}

.transition-all {
	transition: all .2s ease-in-out;
}

.footer-logo {
	top: 50px;
	left: 50px;
}

.head-logo {
	left: -9.5rem;
	top: 1rem;
}

.copyright {
	bottom: 50px;
	left: 50px;
}

//Hover
.bracket-rotate {
	transform: rotate(0deg);
	transition: all .3s ease-in-out;

	&:hover {
		@apply text-grey-500;
		transform: rotate(90deg);
		transition: all .3s ease-in-out;
	}
}

.bracket-down {
	transform: rotate(90deg);
	transition: all .3s ease-in-out;
}

// Aspect Ratios.
.aspect-ratio {
	&:before {
		display: block;
		width: 100%;
		content: '';
	}

	&-8\:10 {
		&:before {
			padding-top: 125%;
		}
	}
}

.md\:aspect-ratio {

	@screen md {
		&-9\:5 {
			&:before {
				padding-top: 55%;
			}
		}
	}
}


/* ============================ */
.leading-normal p {
    font-family: initial;
}
.leading-normal p a {
    text-decoration: underline;
}
.head-logo {
	margin-top: -0.9em;
	.open-link {
		font-size: 14px;
		display: inline-block;
	}
}

/* sidenav */
.admin-bar .offcanvas-collapse {
	margin-top: 35px;
}
.offcanvas-collapse {
	position: fixed;
	top: 0;/* Height of navbar */
	left: 0%;
	height: 100%;
	color: #555;
	transform: translateX(-100%);
	padding-right: 1rem;
	padding-left: 1rem;
	overflow: hidden auto;
	visibility: hidden;
	background-color: #fff;
	transition: visibility .3s ease-in-out, -webkit-transform .3s ease-in-out;
	transition: transform .3s ease-in-out, visibility .3s ease-in-out;
	transition: transform .3s ease-in-out, visibility .3s ease-in-out, -webkit-transform .3s ease-in-out;
	box-shadow: -2px 0 7px 1px rgba(173, 173, 173, 0.5);
	z-index: 11;
	font-size: medium;

	.logo-with-title {
		position: absolute;
		left: 0;
		height: auto !important;
	}

	&.open {
		visibility: visible;
		transform: translateX(0%);
	}
	.sidenav-title .close {
		font-size: 2em;
		cursor: pointer;
		&.text-capitalize {
			text-transform: capitalize;
		}
	}
	
	.choice {
	    box-sizing: border-box;
	    padding: 0;
	    overflow: hidden;
	    float: left;
	    color: #000;
	    border-color: #000;

		form {
			overflow: hidden;
			.product-name a {
				color: #000;
				border-bottom: 0;
			}
		}
		&.collapsed {			
			.card-body {
				display: none;
			}
		}
		&.order {
			background-color: #d9c3ed;
			.cart_totals {
				float: none !important;
				width: auto;
				overflow: hidden;
				.wc-proceed-to-checkout {
					display: none;
				}
			}
		}
		&.shipping {
			background-color: #91d3ed;
		}
		&.billing {
			background-color: #feda01;
		}
		&.submit-order {
			background-color: #000;
			color: #fff;
			#payment {
				background: transparent;
				#place_order {
					width: 100%;
				    background: #fff;
				    color: #000;
				    font-size: 1rem;
				    font-weight: bold;
				    margin-top: 1em;
		    		padding: 1em;
				}
			}
			.woocommerce-checkout-review-order-table {
				.order-total {
				    font-size: 2em;
				}
				th {
				    width: 50%;
				}
				ul {
					li {
						padding-left: 0 !important;
					}
				}
			}
		}

		.card-header {
		    cursor: pointer;
		}

		.next-tab {
		    padding: 1em;
		    margin-top: 3em;
		}

		input::placeholder {
		  color: #000;
		}
		input[type=text] {
			border-color: #000;
		}

		select {
			border-color: #000;
			height: auto;
			color: #000 !important;
    		font-weight: bold;
		}
	}
	
}

@media  (min-width: 992px){
	.offcanvas-collapse {
		/* Cart & Checkout tabs */
		.choice {
	    	transition: width 0.2s;
			.card-header {
				float: left;
				height: 100%;
				text-align: left;
				padding-top: 6em !important;
				.title {
					height: 100%;
				    writing-mode: vertical-lr;
				    text-orientation: upright;
				    margin: auto;
				}
			}

			
			&.open {
			    width: calc(100% - 96px);		    
				.card-header {
					margin-right: 1em;
				}
				.card-body {
					.sidenav-title {
					    right: 1%;
					    font-size: 2em;
					    top: 0;
					}
				}
			}

			&.collapsed {
			    width: 2em;
				.card-header {
					width: 100%;	
				}
			}

		} /* .choice */
	}
}
/* For mobile and tablet */
@media (max-width: 991px) {
	.offcanvas-collapse {
		& > .logo-with-title {
			display: none;
		}
		.choice {
			&.open {
			    height: calc(100% - 168px);
			    overflow: auto;
			}
			&.collapsed {
			    height: 2em;
			}
			transition: height 0.2s;
		    width: 100% !important;
	
			.card-header {
			    text-align: center;
			    padding: 0.1em;
			}
			.close {
				display: none;
			}

		}
	}
}


/* Latest posts styles */
.latest-tabs {

	.position-absolute {
		bottom: 0;
	}
	.nav {
		.nav-item {
			position: relative;
			border: 4px solid;
			border-radius: 0;
			&:hover {
				color: initial;
			}
			&.active {
				&:before {
				    content: "";
				    position: absolute;
				    padding: 7px 3% 4px;
				    border: 4px solid;
				    background-color: #fff;
				    top: 0;
				    margin-top: -15px;
				    left: 50%;
				    transform: translateX(-50%);
				    border-bottom: 0;
				}	
			}
		}
	}
}


#faq-section {
	background-repeat: no-repeat;
    background-position: center top;
    background-size: contain;
	.bg-white, .bg-white-400 {
		background-color: transparent !important;
	}
}

.logo-with-title {
	top: 0;
	.font-weight-bold {
		&.text-uppercase {
		    text-orientation: upright;
		    writing-mode: vertical-rl;
		    display: block;
		    margin: auto;
		}
	}
	img {
	    pointer-events: none;
	    user-select: none;
	}
	.img-container {
		position: relative;
		background-color: #000;
		width: 100px;
		/* height: 100px; */
		overflow: hidden;
		.logo-items {
		    overflow: hidden;
		    position: relative;
		    padding-top: 1em;
		    padding-bottom: 1em;
		    height: 1em;
		    box-sizing: content-box;
			> * {
				position: absolute;
			}
			.bullet-3 {
			    top: 10%;
			    left: 10%;
			    transform: rotate(-90deg);
			}
			.bullet-4 {
			    top: 60%;
			    left: 10%;
			}
			.bullet-8 {
			    right: 10%;
			    top: 10%;
			}
			.bullet-2 {
			    top: 60%;
			    right: 10%;
			}
			.cart-total {
				top: 50%;
			    left: 50%;
			    font-size: 2em;
			    line-height: 1;
			    transform: translate(-50%, -50%);
			}
		}
		.cart-text {
			position: relative;
		}
		.checkout-text {
		    font-size: 16px;
		    position: absolute;
		    display: none;
		}
		&:hover {
			.checkout-text {
				position: relative;
				display: block;
			}
		}
	}

}


/* product list */
.woocommerce.card {
	border-color: #000;
	.added_to_cart {
		display: none;
	}
	.add_to_cart_button {
		background-color: #000 !important;
		&.loading {
			.price {
				display: none;
			}
		}
	}
}


/* Header */
.checkout-header {
	background-color: #000 !important;
	.logo-with-title {
		font-size: 14px;
		img {
			width: 20% !important;
		}
		.img-container {
			padding-top: 5px !important;
    		padding-bottom: 5px !important;
		}
	}
}


.bg-black {
	background-color: #000;
}
.close-offcanvas {
	cursor: pointer;
	font-size: 3em;
}

.woocommerce-checkout .stripe-card-group,
.wc-stripe-elements-field {
    width: 100%;
    border-color: #000;
    color: #000 !important;
}

/* sidenav cart */
.offcanvas-collapse .woocommerce table.shop_table, 
.offcanvas-collapse .woocommerce table.shop_table td, 
.offcanvas-collapse .woocommerce table.shop_table th {
	border: none;
	font-weight: bold;

}
.shop_table.woocommerce-checkout-review-order-table {
	width: 100% !important;
}
.offcanvas-collapse .woocommerce table.shop_table .product-name a {
    pointer-events: none;
}
.offcanvas-collapse .woocommerce table.shop_table thead, 
// .offcanvas-collapse .woocommerce table.shop_table .product-remove, 
.offcanvas-collapse .woocommerce table.shop_table .product-thumbnail a,
.offcanvas-collapse .woocommerce table.shop_table .product-price,
.offcanvas-collapse .woocommerce table.shop_table tr:not(.cart_item) {
	display: none;
}
.offcanvas-collapse .woocommerce table.shop_table .product-thumbnail {
	position: relative;
}
.offcanvas-collapse .woocommerce table.shop_table .product-thumbnail:before {
	content: '';
	position: absolute;
    background-position: center;
    background-repeat: no-repeat;
    top: 50%;
    left: 0;
    padding: 1em;
    transform: translateY(-50%);
}

.offcanvas-collapse .woocommerce table.shop_table .product-quantity .quantity .quantity-button {
	cursor: pointer;
	user-select: none;
}
.offcanvas-collapse .woocommerce table.shop_table .product-quantity input[type="number"] {
	display: none;
}

.offcanvas-collapse .woocommerce table.shop_table tr:nth-of-type(8n-7) .product-thumbnail:before {
	background-image: url('../images/Bullet-1.svg');
}

.offcanvas-collapse .woocommerce table.shop_table tr:nth-of-type(8n-6) .product-thumbnail:before {
	background-image: url('../images/Bullet-2.svg');

}

.offcanvas-collapse .woocommerce table.shop_table tr:nth-of-type(8n-5) .product-thumbnail:before {
	background-image: url('../images/Bullet-3.svg');
}

.offcanvas-collapse .woocommerce table.shop_table tr:nth-of-type(8n-4) .product-thumbnail:before {
	background-image: url('../images/Bullet-4.svg');
}

.offcanvas-collapse .woocommerce table.shop_table tr:nth-of-type(8n-3) .product-thumbnail:before {
	background-image: url('../images/Bullet-5.svg');
}

.offcanvas-collapse .woocommerce table.shop_table tr:nth-of-type(8n-2) .product-thumbnail:before {
	background-image: url('../images/Bullet-6.svg');
}

.offcanvas-collapse .woocommerce table.shop_table tr:nth-of-type(8n-1) .product-thumbnail:before {
	background-image: url('../images/Bullet-7.svg');
}
.offcanvas-collapse .woocommerce table.shop_table tr:nth-of-type(8n) .product-thumbnail:before {
	background-image: url('../images/Bullet-8.svg');
}

.offcanvas-collapse .cart-container.updating {
	position: relative;
}
.offcanvas-collapse .cart-container.updating:after {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    background-color: rgba(255,255,255, 0.5);
    top: 0;
    left: 0;
}

